--- a/app/src/main/res/layout/my_health_fragment.xml
+++ b/app/src/main/res/layout/my_health_fragment.xml
@@ -9,13 +9,13 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="40dp"
         android:layout_marginRight="40dp"
+        android:layout_marginTop="20dp"
         android:orientation="vertical"
         android:divider="@drawable/divider"
         android:showDividers="middle">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:layout_marginTop="20dp"
         android:orientation="horizontal">
 
         <TextView
@@ -88,30 +88,7 @@
 
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/textView5"
-            android:layout_width="71dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="Blood sugar level:"
-            android:fontFamily="serif"
-            android:gravity="center_vertical"/>
-
-        <EditText
-            android:id="@+id/BSLevelText"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:textAlignment="viewEnd"
-            android:fontFamily="serif"
-            android:inputType="number" />
-
-    </LinearLayout>
     </LinearLayout>
 
     <Button
@@ -128,7 +105,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="40dp"
         android:layout_marginRight="40dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="80dp"
         android:orientation="vertical"
         android:divider="@drawable/divider"
         android:showDividers="middle">
@@ -136,6 +113,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="40dp"
+            android:background="#B6F172"
             android:text="Status"
             android:textAlignment="center"></TextView>
 
@@ -162,35 +140,10 @@
                 android:layout_weight="1"
                 android:textAlignment="viewEnd"
                 android:fontFamily="serif"
-                android:gravity="center_vertical"
+                android:textSize="18sp"
                 app:layout_constraintTop_toTopOf="parent" />
         </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/textView9"
-                android:layout_width="25dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:text="Blood sugar level:"
-                android:fontFamily="serif"
-                android:gravity="center_vertical"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
-                android:id="@+id/bsLevelInfo"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:textAlignment="viewEnd"
-                android:fontFamily="serif"
-                android:gravity="center_vertical"
-                app:layout_constraintTop_toTopOf="parent" />
-        </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="40dp"
@@ -214,7 +167,7 @@
                 android:layout_weight="1"
                 android:textAlignment="viewEnd"
                 android:fontFamily="serif"
-                android:gravity="center_vertical"
+                android:textSize="18sp"
                 app:layout_constraintTop_toTopOf="parent" />
         </LinearLayout>
 
